# gbd-vn

./: .gitignore  MANUSCRIPT_MAIN.md  MANUSCRIPT_SUPPLEMENT.md  README.md  RESULTS_MAIN.md  SENSITIVITY_DISCUSSION.md  analysis.ipynb  analysis.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
data/processed/: cmnn_vietnam.csv  level1_sea_allages.csv  level1_sea_asr.csv  population.csv  vietnam_cmnn_detail.csv  vietnam_population.csv  yll_yld_ratio.csv  yll_yld_sea.csv
figures/static/: fig2_caption.txt
projects/01_epi_transition/: README.md
projects/02_cause_specific_30q70/: README.md
projects/03_level2_ncd/: README.md
projects/04_cmnn_vanishing/: README.md
projects/05_tobacco_attributable/: README.md
projects/06_diet_metabolic/: README.md
projects/07_age_stratified/: README.md
projects/08_covid_disruption/: README.md
projects/09_projections_2030/: README.md
projects/10_msk_transition/: README.md
projects/11_pm25_ncd/: README.md
raw_data/: README.md
scripts/: 00_setup.py  01_load_clean.py  02_metrics.py  03_trends.py  04_decomposition.py  05_sea_comparison.py  06_figures.py  07_30q70_sea.py  build_main_docx.py  build_supp_docx.py  md_to_docx.py  utils.py  verify_all.py
shared/: __init__.py  constants.py  figures.py  io.py  palette.py  paths.py  sdi.py  stats.py
shared_processed/: README.md  burden_sea.csv  cmnn_split.csv  level1_sea_1990_2023.csv  probability_30q70.csv  sdi_sea.csv  sea_30q70.csv
tables/: decomposition_results.csv  metrics.csv  sea_ncd_death_rate_2023.csv  sea_yll_yld_ratio.csv  table1_summary.csv
(+18 files in other folders)
