[build-system]
requires = ["setuptools>=65"]
build-backend = "setuptools.build_meta"

[project]
name = "gbd-vietnam"
version = "0.1.0"
requires-python = ">=3.10"
description = "GBD Vietnam monorepo — shared analysis utilities + per-paper projects"

[tool.setuptools.packages.find]
include = ["shared*"]
